new military shop

--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
                         <div class="cont-main">
                             <h1 class="title-header" style="color: #FFF; font-weight: bolder; font-size: 35px;">Військове екіпірування</h1>
                             <p>
-                                Наш інтерент-магазин представляє тактичне єкіпірування, та фортяний одяг для військовослужбовців. 
+                                Наш інтерент-магазин представляє тактичне екіпірування, та фортяний одяг для військовослужбовців. 
                                 Всі товари відповідають стандартам якості. Вони практичні та безпечні. 
                                 Звернувшись до нашого магазину, ви купуєте товар за вигідною ціною та швидклю доставкою по всій Україні. 
                             </p>
                             <div class="">
                                 <a href="./pages/contacts.html"><button class="button-light">Контикти</button></a>
-                                <a href="https://t.me/AnastasiyG_22"><button class="button-darck">Підписатися на канал</button></a>
+                                <a href="none"><button class="button-darck">Підписатися на канал</button></a>
                             </div>
                         </div>
                     </div>
