--- a/pages/pro_nas.html
+++ b/pages/pro_nas.html
@@ -63,7 +63,7 @@
             <div class="container">
                 
                 <h2 class="title-header aline-center" style="margin-top: 65px;">ВІЙСЬКОВЕ ЕКІПІРУВАННЯ</h2>
-                <p class="sub-cont" style="text-align: center;">Наш інтерент-магазин представляє тактичне єкіпірування, та фортяний одяг для військовослужбовців. 
+                <p class="sub-cont" style="text-align: center;">Наш інтерент-магазин представляє тактичне екіпірування, та фортяний одяг для військовослужбовців. 
                         Всі товари відповідають стандартам якості. Вони практичні та безпечні. Звернувшись до нашого магазину, 
                         ви купуєте товар за вигідною ціною та швидклю доставкою по всій Україні.</p>
                 <div class="block" style="display: flex; justify-content: center; margin-top: 50px;">
