--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                                 Звернувшись до нашого магазину, ви купуєте товар за вигідною ціною та швидклю доставкою по всій Україні. 
                             </p>
                             <div class="">
-                                <a href="./pages/contacts.html"><button class="button-light">Контикти</button></a>
+                                <a href="./pages/contacts.html"><button class="button-light">Контакти</button></a>
                                 <a href="none"><button class="button-darck">Підписатися на канал</button></a>
                             </div>
                         </div>
