--- a/pages/detailed_information1.html
+++ b/pages/detailed_information1.html
@@ -69,15 +69,15 @@
             <div class="container">
                 <div class="row row-medium otst">
                     
-                    <h2 class="otst2 column width-1-1" style="text-align: center; font-size: 32px; margin-top: 55px;">Шапка чорна Фліс</h2>
+                    <h2 class="otst2 column width-1-1" style="text-align: center; font-size: 32px; margin-top: 55px;">ПОНЧО АБО "ДОЩОВИК"</h2>
 
                     <div class="column width-1-2-lg width-1-1-md width-1-1-sm">
                         <div class="slider slide-show">
                             <div class="img-wish">
-                                <img src="../img/photo_2023-01-04_16-31-39.jpg" >
+                                <img src="../img/poncho.jpg" >
                             </div>
                             <div class="img-wish">
-                                <img src="../img/photo_2023-01-04_16-31-38.jpg" >
+                                <img src="../img/ponchos.jpg" >
                             </div>
                         </div>
                     </div>
@@ -86,25 +86,25 @@
                         <div style="margin-bottom: 15px;" class="column width-1-1">
                             <div class="flex" style="justify-content: space-between; border-bottom: 2.25px dotted #CCC;">
                                 <p style="margin-bottom: -8px; background-color: #FFF; padding: 3px; z-index: 5;">Назва</p>
-                                <p style="margin-bottom: -8px; background-color: #FFF; padding: 3px; z-index: 5;">Шапка чорна Фліс</p>
+                                <p style="margin-bottom: -8px; background-color: #FFF; padding: 3px; z-index: 5;">ПОНЧО АБО "ДОЩОВИК"</p>
                             </div>
                         </div>
                         <div style="margin: 15px 0;" class="column width-1-1">
                             <div class="flex" style="justify-content: space-between; border-bottom: 2.25px dotted #CCC;">
                                 <p style="margin-bottom: -8px; background-color: #FFF; padding: 3px; z-index: 5;">Ціна</p>
-                                <p style="margin-bottom: -8px; background-color: #FFF; padding: 3px; z-index: 5;">200 грн</p>
+                                <p style="margin-bottom: -8px; background-color: #FFF; padding: 3px; z-index: 5;">488 грн</p>
                             </div>
                         </div>
                         <div style="margin: 15px 0;" class="column width-1-1 none">
                             <div class="flex" style="justify-content: space-between; border-bottom: 2.25px dotted #CCC;">
                                 <p style="margin-bottom: -8px; background-color: #FFF; padding: 3px; z-index: 5;">Колір</p>
-                                <p style="margin-bottom: -8px; background-color: #FFF; padding: 3px; z-index: 5;">Чорний</p>
+                                <p style="margin-bottom: -8px; background-color: #FFF; padding: 3px; z-index: 5;">Темно-зелений</p>
                             </div>
                         </div>
                         <div style="margin: 15px 0;" class="column width-1-1">
                             <div class="flex" style="justify-content: space-between; border-bottom: 2.25px dotted #CCC;">
                                 <p style="margin-bottom: -8px; background-color: #FFF; padding: 3px; z-index: 5;">Розміри</p>
-                                <p style="margin-bottom: -8px; background-color: #FFF; padding: 3px; z-index: 5;">М-XL</p>
+                                <p style="margin-bottom: -8px; background-color: #FFF; padding: 3px; z-index: 5;">Універсальний</p>
                             </div>
                         </div>
                         <!--<div style="margin: 15px 0;" class="column width-1-1">
