--- a/pages/detailed_information2.html
+++ b/pages/detailed_information2.html
@@ -69,12 +69,12 @@
             <div class="container">
                 <div class="row row-medium otst">
                     
-                    <h2 class="otst2 column width-1-1" style="text-align: center; font-size: 32px; margin-top: 55px;">Шапка олива Фліс</h2>
+                    <h2 class="otst2 column width-1-1" style="text-align: center; font-size: 32px; margin-top: 55px;">ПЛАЩ ПАЛАТКА, пончо, дощовик</h2>
 
                     <div class="column width-1-2-lg width-1-1-md width-1-1-sm">
                         <div class="slider slide-show">
                             <div class="img-wish">
-                                <img src="../img/photo_2022-12-22_17-33-23.jpg">
+                                <img src="../img/doshik.jpg">
                             </div>
                         </div>
                     </div>
@@ -83,25 +83,25 @@
                         <div style="margin-bottom: 15px;" class="column width-1-1">
                             <div class="flex" style="justify-content: space-between; border-bottom: 2.25px dotted #CCC;">
                                 <p style="margin-bottom: -8px; background-color: #FFF; padding: 3px; z-index: 5;">Назва</p>
-                                <p style="margin-bottom: -8px; background-color: #FFF; padding: 3px; z-index: 5;">Шапка олива Фліс</p>
+                                <p style="margin-bottom: -8px; background-color: #FFF; padding: 3px; z-index: 5;">ПЛАЩ ПАЛАТКА, пончо, дощовик</p>
                             </div>
                         </div>
                         <div style="margin: 15px 0;" class="column width-1-1">
                             <div class="flex" style="justify-content: space-between; border-bottom: 2.25px dotted #CCC;">
                                 <p style="margin-bottom: -8px; background-color: #FFF; padding: 3px; z-index: 5;">Ціна</p>
-                                <p style="margin-bottom: -8px; background-color: #FFF; padding: 3px; z-index: 5;">200 грн</p>
+                                <p style="margin-bottom: -8px; background-color: #FFF; padding: 3px; z-index: 5;">738 грн</p>
                             </div>
                         </div>
                         <div style="margin: 15px 0;" class="column width-1-1 none">
                             <div class="flex" style="justify-content: space-between; border-bottom: 2.25px dotted #CCC;">
                                 <p style="margin-bottom: -8px; background-color: #FFF; padding: 3px; z-index: 5;">Колір</p>
-                                <p style="margin-bottom: -8px; background-color: #FFF; padding: 3px; z-index: 5;">Олива</p>
+                                <p style="margin-bottom: -8px; background-color: #FFF; padding: 3px; z-index: 5;">Зелений</p>
                             </div>
                         </div>
                         <div style="margin: 15px 0;" class="column width-1-1">
                             <div class="flex" style="justify-content: space-between; border-bottom: 2.25px dotted #CCC;">
                                 <p style="margin-bottom: -8px; background-color: #FFF; padding: 3px; z-index: 5;">Розміри</p>
-                                <p style="margin-bottom: -8px; background-color: #FFF; padding: 3px; z-index: 5;">М-XL</p>
+                                <p style="margin-bottom: -8px; background-color: #FFF; padding: 3px; z-index: 5;">Універсальний</p>
                             </div>
                         </div>
                         <!--<div style="margin: 15px 0;" class="column width-1-1">
